--- a/projeto2/nbproject/project.properties
+++ b/projeto2/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Projeto2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.RXTXcomm.jar=C:\\Users\\xand\u00e3o\\projectCar\\projeto2\\RXTXcomm.jar
+file.reference.RXTXcomm.jar=RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
