Iniciado a junção entre as telas de controle remoto com as telas das demais funções, tudo indo bem

--- a/Interface/InterfaceProjectCar/nbproject/project.properties
+++ b/Interface/InterfaceProjectCar/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/InterfaceProjectCar.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.RXTXcomm.jar=/usr/share/java/RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.RXTXcomm.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
