--- a/Interface/InterfaceProjectCar/nbproject/private/private.properties
+++ b/Interface/InterfaceProjectCar/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/todos/alunos/cm/a968692/.netbeans/8.2/build.properties
+user.properties.file=/home/xandao/.netbeans/8.2/build.properties
