--- a/projeto2-java/InterfaceProjectCar/nbproject/private/private.properties
+++ b/projeto2-java/InterfaceProjectCar/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=/home/xandao/.netbeans/8.2/build.properties
+file.reference.RXTXcomm.jar=C:\\Users\\Clodoaldo Basaglia\\Documents\\UTF2018\\UTFPR2018\\rxtx-2.1-7-bins-r2\\RXTXcomm.jar
+user.properties.file=C:\\Users\\Clodoaldo Basaglia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
